// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubtractionDetail /> should not render icons when [canModify=false] 1`] = `
<div>
  <ViewHeader
    title="foo - Subtraction"
  >
    <Flex
      alignContent="stretch"
      alignItems="flex-end"
      direction="row"
      justifyContent="flex-start"
      wrap="nowrap"
    >
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        shrink={0}
      >
        <strong>
          foo
        </strong>
      </FlexItem>
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={1}
        shrink={0}
      />
    </Flex>
  </ViewHeader>
  <Table>
    <tbody>
      <tr>
        <th>
          Nickname
        </th>
        <td>
          foo-nickname
        </td>
      </tr>
      <tr>
        <th>
          File
        </th>
        <td>
          foo-file
        </td>
      </tr>
      <tr>
        <th>
          Sequence Count
        </th>
        <td />
      </tr>
      <tr>
        <th>
          GC Estimate
        </th>
        <td>
          0.400
        </td>
      </tr>
      <tr>
        <th>
          Linked Samples
        </th>
        <td>
          2
        </td>
      </tr>
    </tbody>
  </Table>
  <Connect(EditSubtraction)
    onHide={[Function]}
    show={false}
  />
  <Connect(RemoveSubtraction)
    id="foo"
  />
</div>
`;

exports[`<SubtractionDetail /> should render 1`] = `
<div>
  <ViewHeader
    title="foo - Subtraction"
  >
    <Flex
      alignContent="stretch"
      alignItems="flex-end"
      direction="row"
      justifyContent="flex-start"
      wrap="nowrap"
    >
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        shrink={0}
      >
        <strong>
          foo
        </strong>
      </FlexItem>
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={1}
        shrink={0}
      >
        <Icon
          bsStyle="warning"
          faStyle="fas"
          fixedWidth={false}
          name="pencil-alt"
          onClick={[Function]}
          pullRight={true}
        />
      </FlexItem>
    </Flex>
  </ViewHeader>
  <Table>
    <tbody>
      <tr>
        <th>
          Nickname
        </th>
        <td>
          foo-nickname
        </td>
      </tr>
      <tr>
        <th>
          File
        </th>
        <td>
          foo-file
        </td>
      </tr>
      <tr>
        <th>
          Sequence Count
        </th>
        <td />
      </tr>
      <tr>
        <th>
          GC Estimate
        </th>
        <td>
          0.400
        </td>
      </tr>
      <tr>
        <th>
          Linked Samples
        </th>
        <td>
          2
        </td>
      </tr>
    </tbody>
  </Table>
  <Connect(EditSubtraction)
    onHide={[Function]}
    show={false}
  />
  <Connect(RemoveSubtraction)
    id="foo"
  />
</div>
`;

exports[`<SubtractionDetail /> should render loading when [detail=null] 1`] = `<LoadingPlaceholder />`;

exports[`<SubtractionDetail /> should render not found on request error 1`] = `<NotFound />`;

exports[`<SubtractionDetail /> should render pending message when subtraction is not ready 1`] = `
<LoadingPlaceholder
  message="Subtraction is still being imported"
/>
`;

exports[`<SubtractionDetail /> should render remove button when there are no linked samples 1`] = `
<div>
  <ViewHeader
    title="foo - Subtraction"
  >
    <Flex
      alignContent="stretch"
      alignItems="flex-end"
      direction="row"
      justifyContent="flex-start"
      wrap="nowrap"
    >
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        shrink={0}
      >
        <strong>
          foo
        </strong>
      </FlexItem>
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={1}
        shrink={0}
      >
        <Icon
          bsStyle="danger"
          faStyle="fas"
          fixedWidth={false}
          name="trash"
          onClick={[MockFunction]}
          pullRight={true}
          style={
            Object {
              "paddingLeft": "5px",
            }
          }
        />
        <Icon
          bsStyle="warning"
          faStyle="fas"
          fixedWidth={false}
          name="pencil-alt"
          onClick={[Function]}
          pullRight={true}
        />
      </FlexItem>
    </Flex>
  </ViewHeader>
  <Table>
    <tbody>
      <tr>
        <th>
          Nickname
        </th>
        <td>
          foo-nickname
        </td>
      </tr>
      <tr>
        <th>
          File
        </th>
        <td>
          foo-file
        </td>
      </tr>
      <tr>
        <th>
          Sequence Count
        </th>
        <td />
      </tr>
      <tr>
        <th>
          GC Estimate
        </th>
        <td>
          0.400
        </td>
      </tr>
      <tr>
        <th>
          Linked Samples
        </th>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </Table>
  <Connect(EditSubtraction)
    onHide={[Function]}
    show={false}
  />
  <Connect(RemoveSubtraction)
    id="foo"
  />
</div>
`;
